--- a/app/src/main/res/layout/adapter_entrega.xml
+++ b/app/src/main/res/layout/adapter_entrega.xml
@@ -5,13 +5,33 @@
     android:layout_marginBottom="8dp"
     android:background="@android:color/white"
     android:orientation="horizontal"
-    android:padding="16dp">
+    android:padding="8dp">
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/statusTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="end"
+            android:text="@string/status"
+            android:textColor="@android:color/holo_red_light"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/nomeMotoristaTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:text="@string/motorista"
+            android:textColor="@android:color/black"
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/numeroNotaTextView"
@@ -26,7 +46,6 @@
             android:id="@+id/destinatarioTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
             android:text="@string/destinatario"
             android:textColor="@android:color/black"
             android:textSize="18sp"
@@ -37,15 +56,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/endereco"
-            android:textColor="@android:color/black"
-            android:textSize="18sp" />
-
-        <TextView
-            android:id="@+id/nomeMotoristaTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:text="@string/motorista"
             android:textColor="@android:color/black"
             android:textSize="18sp" />
 
@@ -66,14 +76,4 @@
             android:textSize="18sp" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/statusTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:text="@string/status"
-        android:textColor="@android:color/holo_red_light"
-        android:textSize="16sp"
-        android:textStyle="bold" />
 </LinearLayout>
