--- a/app/src/main/res/layout/dialog_nota.xml
+++ b/app/src/main/res/layout/dialog_nota.xml
@@ -68,8 +68,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="35dp"
                     android:layout_marginTop="5dp"
-
-
                     android:ems="10"
                     android:inputType="datetime" />
 
@@ -178,14 +176,27 @@
                     android:textColor="@android:color/black"
                     android:textSize="16sp" />
 
-                <EditText
-                    android:id="@+id/enderecoDestinatarioEditText"
-                    style="@style/EditTextTheme"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="35dp"
-                    android:layout_marginTop="5dp"
-                    android:ems="10"
-                    android:inputType="textCapWords|textCapSentences" />
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <EditText
+                        android:id="@+id/enderecoDestinatarioEditText"
+                        style="@style/EditTextTheme"
+                        android:layout_width="0dp"
+                        android:layout_height="35dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_weight="1"
+                        android:ems="10"
+                        android:inputType="textCapWords|textCapSentences" />
+
+                    <ImageButton
+                        android:id="@+id/openMapImageButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:srcCompat="@drawable/ic_map_24dp" />
+                </LinearLayout>
 
                 <TextView
                     android:layout_width="wrap_content"
