--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:background="@color/colorPrimary">
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/profileImageView"
                 android:layout_width="224dp"
                 android:layout_height="200dp"
@@ -26,7 +26,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/perfil_sem_foto" />
+                android:src="@drawable/perfil_sem_foto" />
 
             <com.github.clans.fab.FloatingActionMenu
                 android:layout_width="wrap_content"
@@ -283,6 +283,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
                 android:text="1° Habilitação: "
                 android:textColor="@android:color/darker_gray" />
 
@@ -290,12 +291,14 @@
                 android:id="@+id/primeiraHabilitacaoTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
                 android:text="@string/traco"
                 android:textColor="@android:color/black" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
                 android:text="Local: "
                 android:textColor="@android:color/darker_gray" />
 
@@ -303,12 +306,14 @@
                 android:id="@+id/localTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
                 android:text="@string/traco"
                 android:textColor="@android:color/black" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
                 android:text="Data Emissão: "
                 android:textColor="@android:color/darker_gray" />
 
@@ -316,6 +321,7 @@
                 android:id="@+id/dataEmissaoTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
                 android:text="@string/traco"
                 android:textColor="@android:color/black" />
         </GridLayout>
