--- a/app/src/main/res/layout/fragment_veiculos.xml
+++ b/app/src/main/res/layout/fragment_veiculos.xml
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@drawable/background_button"
+        android:background="@color/colorPrimaryDark"
         app:itemIconTint="@drawable/nav_item_color_state"
         app:itemTextColor="@drawable/nav_item_color_state"
         app:menu="@menu/bottom_navigation_veiculos"
