--- a/app/src/main/res/layout/dialog_finalizar_entrega.xml
+++ b/app/src/main/res/layout/dialog_finalizar_entrega.xml
@@ -1,120 +1,153 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="vertical">
-
-        <EditText
-            android:id="@+id/horarioSaidaEditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="Horário de saída"
-            android:inputType="time" />
-
-        <EditText
-            android:id="@+id/horarioChegadaEditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:ems="10"
-            android:hint="Horário de chegada"
-            android:inputType="time" />
+        android:fillViewport="true">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_height="0dp"
+            android:background="@android:color/white"
             android:orientation="vertical"
-            android:padding="5dp">
+            android:padding="16dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/background_title"
+                android:gravity="center"
+                android:padding="5dp"
+                android:text="FINALIZAR ENTREGA"
+                android:textColor="@android:color/white"
+                android:textSize="20sp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="Horário de Chegada"
+                android:textColor="@android:color/black"
+                android:textSize="18sp" />
+
+            <EditText
+                android:id="@+id/horarioChegadaEditText"
+                style="@style/EditTextTheme"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:ems="10"
+                android:inputType="time" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="Horário de Saída"
+                android:textColor="@android:color/black"
+                android:textSize="18sp" />
+
+            <EditText
+                android:id="@+id/horarioSaidaEditText"
+                style="@style/EditTextTheme"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:ems="10"
+                android:inputType="time" />
 
             <TextView
                 android:id="@+id/textView5"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="A entrega foi realizada?"
-                android:textColor="@android:color/black"
-                android:textSize="18sp" />
-
-            <Switch
-                android:id="@+id/entregaRealizadaSwitch"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:checked="true"
-                android:textOff="Não"
-                android:textOn="Sim" />
-        </LinearLayout>
+                android:layout_marginTop="16dp"
+                android:text="A Entrega foi realizada?"
+                android:textColor="@android:color/black"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
-        <LinearLayout
-            android:id="@+id/motivoNaoEntregaLinear"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="5dp"
-            android:visibility="gone">
-
-            <TextView
-                android:id="@+id/textView4"
+            <ImageButton
+                android:id="@+id/openChoiceDialogImageButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Qual foi o motivo?"
-                android:textColor="@android:color/black"
-                android:textSize="18sp" />
+                android:background="@android:color/transparent"
+                app:srcCompat="@drawable/ic_thumbs_up_down_24dp" />
 
-            <RadioGroup
-                android:id="@+id/motivosRadioGroup"
+            <LinearLayout
+                android:id="@+id/motivoNaoEntregaLinear"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:orientation="vertical"
+                android:padding="5dp"
+                android:visibility="gone">
 
-                <RadioButton
-                    android:id="@+id/radioButton2"
+                <TextView
+                    android:id="@+id/textView4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Mudança de endereço" />
+                    android:text="Qual foi o motivo?"
+                    android:textColor="@android:color/black"
+                    android:textSize="18sp" />
 
-                <RadioButton
-                    android:id="@+id/radioButton3"
+                <RadioGroup
+                    android:id="@+id/motivosRadioGroup"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Desacordo com pedido" />
+                    android:layout_height="match_parent">
 
-                <RadioButton
-                    android:id="@+id/radioButton4"
+                    <RadioButton
+                        android:id="@+id/radioButton1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Mudança de endereço" />
+
+                    <RadioButton
+                        android:id="@+id/radioButton2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Desacordo com pedido" />
+
+                    <RadioButton
+                        android:id="@+id/radioButton3"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:checked="true"
+                        android:text="Cliente não se encontra" />
+
+                    <RadioButton
+                        android:id="@+id/outrosRadioButton"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Outros" />
+                </RadioGroup>
+
+                <EditText
+                    android:id="@+id/outrosMotivosEditText"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Cliente não se encontra" />
-
-                <RadioButton
-                    android:id="@+id/outrosRadioButton"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Outros" />
-            </RadioGroup>
-
-            <EditText
-                android:visibility="gone"
-                android:id="@+id/outrosMotivosEditText"
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:background="@android:color/white"
-                android:ems="10"
-                android:gravity="start|top"
-                android:hint="Escreva o motivo"
-                android:inputType="textMultiLine"
-                android:padding="5dp" />
-
+                    android:layout_height="150dp"
+                    android:background="@android:color/white"
+                    android:ems="10"
+                    android:gravity="start|top"
+                    android:hint="Escreva o motivo"
+                    android:inputType="textMultiLine"
+                    android:padding="5dp"
+                    android:visibility="gone" />
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
+    </ScrollView>
+
 
     <LinearLayout
         android:id="@+id/buttonsLinear"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="8dp"
         android:orientation="horizontal">
 
         <Button
@@ -122,6 +155,8 @@
             style="@style/ButtonTheme"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
             android:layout_weight="1"
             android:text="@string/cancelar" />
 
@@ -131,7 +166,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Enviar" />
+            android:text="@string/enviar" />
     </LinearLayout>
 
 </LinearLayout>
