--- a/app/src/main/res/layout/fragment_roteirista_coletas.xml
+++ b/app/src/main/res/layout/fragment_roteirista_coletas.xml
@@ -17,10 +17,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@drawable/background_button"
+        android:background="@color/colorPrimaryDark"
         app:itemIconTint="@drawable/nav_item_color_state"
         app:itemTextColor="@drawable/nav_item_color_state"
-        app:menu="@menu/bottom_navigation_entregas"
+        app:menu="@menu/bottom_navigation_coletas"
         tools:layout_editor_absoluteX="1dp"
         tools:layout_editor_absoluteY="36dp" />
 
