--- a/app/src/main/res/layout/fragment_roteirista_entregas_lista.xml
+++ b/app/src/main/res/layout/fragment_roteirista_entregas_lista.xml
@@ -12,13 +12,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/background_search"
+        android:inputType="textCapWords|textCapSentences"
         android:queryHint="Entregas de qual motorista?" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="16dp"
         android:background="@drawable/background_search"
         android:gravity="center_vertical"
         android:orientation="horizontal"
@@ -41,6 +41,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="5dp"
         android:gravity="end" />
 
     <TextView
