--- a/app/src/main/res/layout/fragment_roteirista_notas_cadastradas.xml
+++ b/app/src/main/res/layout/fragment_roteirista_notas_cadastradas.xml
@@ -12,8 +12,8 @@
         android:id="@+id/searchView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
         android:background="@drawable/background_search"
+        android:inputType="numberSigned"
         android:queryHint="Pesquise pelo número da nota" />
 
     <TextView
